<resources>
    <string name="app_name">Virus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">注册/登录</string>

    <string name="head_name">Benson</string>
    <string name="head_email">zjxucb@gmail.com</string>


    <!--Game 游戏类 -->
    <string name="game_agilebuddy_start_game">Start Game</string>
    <string name="game_agilebuddy_score_board">Global Ranking</string>
    <string name="game_agilebuddy_options">Options</string>
    <string name="game_agilebuddy_more_app">More Apps</string>
    <string name="game_agilebuddy_exit">Exit</string>
    <string name="game_agilebuddy_touch_to_start">TOUCH HERE TO START</string>
    <string name="game_agilebuddy_global_ranking">Global Ranking</string>
    <string name="game_agilebuddy_gameover_dialog_tip">Game Over!</string>
    <string name="game_agilebuddy_gameover_dialog_text_poolguy">Pool Guy !</string>
    <string name="game_agilebuddy_gameover_dialog_text_notbad">Not Bad !</string>
    <string name="game_agilebuddy_gameover_dialog_text_awesome">Awesome !</string>
    <string name="game_agilebuddy_gameover_dialog_text_newrecord">New Record !</string>
    <string name="game_agilebuddy_gameover_username_required">Your Name Here !</string>
    <string name="game_agilebuddy_gameover_dialog_positive_button">Retry</string>
    <string name="game_agilebuddy_gameover_dialog_post_score_button">Post</string>
    <string name="game_agilebuddy_gameover_dialog_negative_button">Back</string>

    <string name="game_agilebuddy_ranking_title_loading_info">Loading. Please wait....</string>
    <string name="game_agilebuddy_ranking_title_no">NO.</string>
    <string name="game_agilebuddy_ranking_title_name">NAME</string>
    <string name="game_agilebuddy_ranking_title_score">SCORE</string>
    <string name="game_agilebuddy_ranking_title_date">DATE</string>

    <string name="game_agilebuddy_options_sounds_summary">-Play Background Sounds.</string>
    <string name="game_agilebuddy_options_vibrate_summary">-Action Vibrate Effect.</string>
    <string name="game_agilebuddy_options_showtips_summary">-Show Tips.</string>
    <string name="game_agilebuddy_options_velocity_controller_summary">-Power control ( weak -> strong )</string>
	<string name="game_agilebuddy_options_user_name_summary">-Your Name On Show:
	</string>
	<string name="game_agilebuddy_options_best_record_summary">-Your Best Record:
	</string>
	<string name="game_agilebuddy_options_okay_summary">Okay
	</string>
	<string name="game_agilebuddy_options_upload_score_summary">Post Scores
	</string>
	<string name="game_agilebuddy_options_tips_summary">Tips
	</string>
	<string name="game_agilebuddy_options_toast_username_null">Your Name Can not Be Null !
	</string>
	<string name="game_agilebuddy_options_toast_username_too_long">Length Of Your Name Must Between 1 and 20.
	</string>
	<string name="game_agilebuddy_options_toast_upload_success">Upload Success.
	</string>
	<string name="game_agilebuddy_options_toast_upload_failure">Upload Failure.(Please Check Your Network
		Connection!)
	</string>
	<string name="game_agilebuddy_tips_text">- AGILE BUDDY is a type of action game, which is operated by making use of a mobile phone\'s gravitational sensor.\n\n- Tilt the phone left or right to control the ROLE moving left or right. The more angle in the tilt, the faster the ROLE moves.\n\n- Avoid touching the spike or the ROLE will lose its lifespan. When the lifespan runs out, the game is over.\n\n- Avoid dropping the ROLE on the bottom of screen or the game is over.\n\n- The scores of the game will be decided by a combination of the times the ROLE contacts the footboards and the level of game rating. You can post your records to our global ranking server. We all hope to see your name in the top 25!</string>

    <!--Game 游戏类 -->
    <string name="start_game">开始</string>
    <string name="score_board">排行榜</string>
    <string name="options">选项</string>
    <string name="more_app">更多...</string>
    <string name="exit">退出</string>
    <string name="touch_to_start">点击开始游戏</string>
    <string name="global_ranking">全球排行</string>
    <string name="gameover_dialog_tip">游戏结束!</string>
    <string name="gameover_dialog_text_poolguy">可怜的家伙 !</string>
    <string name="gameover_dialog_text_notbad">还不错嘛 !</string>
    <string name="gameover_dialog_text_awesome">你真棒 !</string>
    <string name="gameover_dialog_text_newrecord">个人新记录 !</string>
    <string name="gameover_dialog_positive_button">重来</string>
    <string name="gameover_dialog_post_score_button">提交</string>
    <string name="gameover_dialog_negative_button">返回</string>
    <string name="gameover_username_required">您的大名 !</string>

    <string name="ranking_title_loading_info">正在载入. 请等待....</string>
    <string name="ranking_title_no">排行</string>
    <string name="ranking_title_name">昵称</string>
    <string name="ranking_title_score">分数</string>
    <string name="ranking_title_date">日期</string>

    <string name="options_sounds_summary">-播放背景音效.</string>
    <string name="options_vibrate_summary">-播放震动效果.</string>
    <string name="options_showtips_summary">-开始游戏前显示提示信息.</string>
    <string name="options_velocity_controller_summary">-敏捷度调节 ( 迟缓 -> 敏捷 )</string>
    <string name="options_user_name_summary">-您在排行榜的昵称:
	</string>
    <string name="options_best_record_summary">-您的最高纪录:
	</string>
    <string name="options_okay_summary">确定
	</string>
    <string name="options_upload_score_summary">提交成绩
	</string>
    <string name="options_tips_summary">提示
	</string>
    <string name="options_toast_username_null">您的昵称不能为空!
	</string>
    <string name="options_toast_username_too_long">昵称长度必须界于1到20.
	</string>
    <string name="options_toast_upload_success">成功提交.
	</string>
    <string name="options_toast_upload_failure">提交失败.(请检查您的网络连接是否正常)
	</string>
    <string name="tips_text">- Agile Buddy是一款动作类小游戏, 使用手机的重力感应器进行操作.\n\n- 左右倾斜手机可以控制主角左右移动, 倾斜角度越大, 主角移动速度越快.\n\n- 不要让主角接触到游戏中的尖刺, 否则主角将损失部分生命值. 当生命值耗完时, 游戏将结束.\n\n- 不要让主角掉落到屏幕的下方, 否则游戏将结束.\n\n- 游戏分数取决于主角和踏板接触的次数和游戏的等级. 您可以将您的个人记录提交到全球排名的列表中, 期待在这个列表中见到您的大名.
	</string>


    <!--软件更新-->
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info"> 检测到新版本，立即更新吗？</string>
    <string name="soft_update_updatebtn">立即更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新 (^ ^)</string>
    <string name="soft_update_cancel">取消</string>
    <string name="soft_update_no">APP已经是最新版本</string>

    <!--登录-->
    <string name="text_sign_in">登录</string>
    <string name="text_sign_up">注册</string>
    <string name="autologin">自动登录</string>
    <string name="login_Verification_Code">获取验证码</string>
    <string name="rememberpassword">记住密码</string>
    <string name="textlogin_password">密码</string>
    <string name="textlogin_id">手机号码</string>

    <!--地图-->
    <string name="startlocation">开始定位</string>
    <string name="stoplocation">停止定位</string>

    <!--Bluetooth-->
    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting">前往设置</string>
    <string name="cancel">取消</string>

    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="expand_search_settings">展开搜索设置</string>
    <string name="retrieve_search_settings">收起搜索设置</string>
    <string name="connect_fail">连接失败</string>
    <string name="disconnected">连接断开</string>
    <string name="please_open_blue">请先打开蓝牙</string>
    <string name="select_operation_type">选择操作类型</string>
    <string name="characteristic">特性</string>
    <string name="data_changed">的数据变化：</string>
    <string name="read">读</string>
    <string name="write">写</string>
    <string name="open_notification">打开通知</string>
    <string name="close_notification">关闭通知</string>
    <string name="service_list">服务列表</string>
    <string name="characteristic_list">特征列表</string>
    <string name="console">操作控制台</string>
    <string name="name">设备广播名：</string>
    <string name="mac">MAC:</string>
    <string name="service">服务</string>
    <string name="type">服务类型(主服务)</string>
    <string name="scan_setting">在下面你可以配置需要扫描的设备的条件，可以为空</string>
    <string name="setting_name">输入蓝牙设备广播名，多个之间以英文逗号隔开</string>
    <string name="setting_mac">输入蓝牙设备mac地址</string>
    <string name="setting_uuid">输入蓝牙设备UUID，多个之间以英文逗号隔开</string>
    <string name="input_hex">请输入HEX格式指令</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="disconnect">断开连接</string>
    <string name="enter">进入操作</string>


</resources>
