<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <com.benson.views.AvatarImageView
        android:id="@+id/login_avatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/login_avatar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"/>

    <EditText
        android:id="@+id/login_id"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:paddingLeft="8dp"
        android:background="@color/colorLoginEditText"
        android:hint="@string/textlogin_id"/>
    <EditText
        android:id="@+id/login_password"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:background="@color/colorLoginEditText"
        android:hint="@string/textlogin_password"/>

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:gravity="center">

        <CheckBox
            android:id="@+id/login_rememberpassword"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_marginLeft="20dp"
            android:text="@string/rememberpassword"
            />
        <CheckBox
            android:id="@+id/login_autologin"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:text="@string/autologin"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/login_sign_in_Button"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_shape"
        android:text="@string/text_sign_in"
        android:textColor="@color/colorlogin_text"
        android:textSize="20dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/login_sign_up_Button"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_shape"
        android:text="@string/text_sign_up"
        android:textColor="@color/colorlogin_text"
        android:textSize="20dp"
        android:layout_gravity="center"/>
</LinearLayout>
