<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <Button
        android:id="@+id/BtnWeather1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/options_toast_upload_success"/>
    <Button
        android:id="@+id/BtnWeather2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/options_toast_upload_failure"/>
    <Button
        android:id="@+id/BtnWeather3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/app_name"/>
    <Button
        android:id="@+id/BtnWeather4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/textWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>