<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/game_agilebuddy_bg_game"
    android:orientation="vertical"
    android:paddingTop="5dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="150dip"
            android:scaleType="center"
            android:src="@drawable/game_agilebuddy_game_logo" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/start_game"
                android:layout_width="220dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="3dip"
                android:background="@drawable/game_agilebuddy_menu_button"
                android:padding="8dip"
                android:text="@string/game_agilebuddy_start_game"
                android:textColor="#FF292066"
                android:textSize="17sp" />

            <Button
                android:id="@+id/score_board"
                android:layout_width="220dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="3dip"
                android:background="@drawable/game_agilebuddy_menu_button"
                android:padding="8dip"
                android:text="@string/game_agilebuddy_score_board"
                android:textColor="#FF292066"
                android:textSize="17sp" />

            <Button
                android:id="@+id/options"
                android:layout_width="220dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="3dip"
                android:background="@drawable/game_agilebuddy_menu_button"
                android:padding="8dip"
                android:text="@string/game_agilebuddy_options"
                android:textColor="#FF292066"
                android:textSize="17sp" />

            <Button
                android:id="@+id/more_app"
                android:layout_width="220dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="3dip"
                android:background="@drawable/game_agilebuddy_menu_button"
                android:padding="8dip"
                android:text="@string/game_agilebuddy_more_app"
                android:textColor="#FF292066"
                android:textSize="17sp" />

            <Button
                android:id="@+id/exit"
                android:layout_width="220dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="3dip"
                android:background="@drawable/game_agilebuddy_menu_button"
                android:padding="8dip"
                android:text="@string/game_agilebuddy_exit"
                android:textColor="#FF292066"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>