<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">


    <EditText
        android:id="@+id/sign_up_id"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7dp"
        android:paddingLeft="8dp"
        android:background="@color/colorLoginEditText"
        android:hint="@string/textlogin_id"/>
    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:background="@color/colorLoginEditText"
        android:hint="@string/textlogin_password"/>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/sign_up_Verification_Code"
            android:layout_width="150dp"
            android:layout_height="46dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorLoginEditText"
            android:hint="@string/login_Verification_Code"
            android:paddingLeft="8dp"/>
        <Button
            android:id="@+id/login_Verification_Btn"
            android:layout_width="120dp"
            android:layout_height="46dp"
            android:layout_marginLeft="55dp"
            android:background="@color/login_button"

            android:text="@string/login_Verification_Code"
            android:textColor="@color/colorlogin_text"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>


    <Button
        android:id="@+id/login_sign_up_btn"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_shape"
        android:text="@string/text_sign_up"
        android:textColor="@color/colorlogin_text"
        android:textSize="20dp"
        android:layout_gravity="center"/>
</LinearLayout>
